organised into file structure

--- a/home.html
+++ b/home.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>home</title>
-<link rel="stylesheet" href="home.css">
+<link rel="stylesheet" href="/static/styles/home.css">
 </head>
 <body>
 
     <div class="container">
 
         <div class="inputbox">
-            <img src="college.jpg" alt="login logo">
+            <img src="/static/logos/college.jpg" alt="login logo">
             <h2 style="font-size: 70px;">Welcome...</h2>
             <h3 style="font-size: 30px;">PACE Institute of Technology and Sciences</h3>
 
@@ -19,7 +19,7 @@
 
         <div class="loginbox">
             <form action="#" method="post">
-                <img src="loginlogo.png" alt="Pace logo">
+                <img src="/static/logos/loginlogo.png" alt="Pace logo">
                 <h3 style="font-size: 30px;">Login</h3>
                 <br>
                 <input type="radio" name="User">Student
